--- a/style2.css
+++ b/style2.css
@@ -97,7 +97,7 @@ section{
     position: relative;
     height: 100vh;
     width: 100%;
-    background-image: url(../images/header.png);
+    background-image: url(/header.png);
     background-size: cover;
     background-position: center;
     display: flex;
